--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5,3 +5,21 @@
 #graph-scatter-plot .nsewdrag.drag {
     fill: #1A1A1A !important;
 }
+
+/* g .point path {
+cursor: pointer !important;
+} */
+
+/* font-family: Merriweather Sans;
+color: #76b900; */
+
+/* "#C1C2C5",
+"#A6A7AB",
+"#909296",
+"#5c5f66",
+"#373A40",
+"#2C2E33",
+"#25262b",
+"#1A1B1E",
+"#141517",
+"#101113", */
