--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,20 +6,30 @@
     fill: #1A1A1A !important;
 }
 
-/* g .point path {
-cursor: pointer !important;
-} */
 
-/* font-family: Merriweather Sans;
-color: #76b900; */
+/* scrollbar */
+.scroll {
+  direction: rtl !important;
+}
+.scroll div div {
+    direction: ltr !important;
+}
 
-/* "#C1C2C5",
-"#A6A7AB",
-"#909296",
-"#5c5f66",
-"#373A40",
-"#2C2E33",
-"#25262b",
-"#1A1B1E",
-"#141517",
-"#101113", */
+
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #76b900; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #2f3445; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #474f68; 
+}
